# chromium_wings

./: BUILD.gn  README.md  wings_resources.grd
app/: app-Info.plist  framework-Info.plist  paths_mac.h  paths_mac.mm  wings_content_main.cc  wings_content_main.h  wings_main.cc  wings_main_delegate.cc  wings_main_delegate.h
browser/: wings.cc  wings.h  wings_application_mac.h  wings_application_mac.mm  wings_browser_context.cc  wings_browser_context.h  wings_browser_main.cc  wings_browser_main.h  wings_browser_main_parts.cc  wings_browser_main_parts.h  wings_browser_main_parts_mac.mm  wings_content_browser_client.cc  wings_content_browser_client.h  wings_devtools_bindings.cc  wings_devtools_bindings.h  wings_devtools_frontend.cc  wings_devtools_frontend.h  wings_devtools_manager_delegate.cc  wings_devtools_manager_delegate.h  wings_mac.mm  wings_network_delegate.cc  wings_network_delegate.h  wings_permission_manager.cc  wings_permission_manager.h  wings_url_request_context_getter.cc  wings_url_request_context_getter.h  wings_web_bindings.cc  wings_web_bindings.h  wings_web_contents_view_delegate.h  wings_web_contents_view_delegate_creator.h  wings_web_contents_view_delegate_mac.mm  wings_web_frontend.cc  wings_web_frontend.h  wings_web_frontend_host.cc  wings_web_frontend_host.h  wings_web_http_handler.cc  wings_web_http_handler.h  wings_web_manager.cc  wings_web_manager.h  wings_web_socket_factory.h
browser/renderer_host/: wings_render_widget_host_view_mac_delegate.h  wings_render_widget_host_view_mac_delegate.mm
common/: wings_content_client.cc  wings_content_client.h
renderer/: wings_content_renderer_client.cc  wings_content_renderer_client.h
web/: .eslintignore  BUILD.gn  package-lock.json  package.json
web/config/: index.js  prod.env.js  test.env.js
web/src/: App.vue  main.js
web/src/components/containers/: WithMenus.vue
web/src/components/data/: Detail.vue  Index.vue  all.js
web/src/components/templates/: Form.vue  Index.vue  all.js
web/src/components/users/: SignIn.vue  all.js
web/src/directives/: vue-keep-scroll-position.js
web/src/inspector/: Runtime.js  utilities.js
web/src/inspector/common/: Color.js  Object.js  ParsedURL.js  ResourceType.js  Settings.js  UIString.js  index.js
web/src/inspector/host/: InspectorFrontendHost.js  InspectorFrontendHostAPI.js  devtools_compatibility.js  index.js
web/src/inspector/protocol/: InspectorBackend.js  commands.js  index.js
web/src/inspector/sdk/: Connections.js  DOMModel.js  DebuggerModel.js  NetworkManager.js  NetworkRequest.js  OverlayModel.js  RemoteObject.js  ResourceTreeModel.js  RuntimeModel.js  Script.js  SecurityOriginManager.js  SourceMapManager.js  Target.js  index.js
web/src/mixins/: keep-scroll-position.js
web/src/request/: index.js
web/src/router/: index.js
web/src/store/: getters.js  index.js  mutations.js
web/src/store/actions/: data.js  index.js  template.js  user.js
web/src/utils/: async.js  debug.js  dom.js  index.js  list.js  page.js
web/temp/: index.html
web/test/unit/: index.js
web/test/unit/specs/inspector/protocol/: index.spec.js
web/test/unit/specs/inspector/sdk/: index.spec.js
